--- a/waypoints/index.html
+++ b/waypoints/index.html
@@ -57,7 +57,7 @@
 
 <!--header>nav>ul>li*3>a{Link $}	-->
 <header>
-	<img src="logo.png" alt="Logo">
+	<img src="http://i.imgur.com/hunIRxR.png" alt="Logo">
 	<nav>
 		<ul>
 			<li><a href="">Link 1</a></li>
