--- a/fitvids/after.html
+++ b/fitvids/after.html
@@ -39,5 +39,10 @@
         	<iframe src="http://player.vimeo.com/video/25708134?title=0&amp;byline=0&amp;portrait=0" width="400" height="225" frameborder="0"></iframe>
         </div>
       </div>
+      <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/fitvids/1.1.0/jquery.fitvids.min.js"></script>
+      <script>
+        $(".container").fitVids();
+      </script>
       </body>
   </html>
