--- a/lettering-js/index.html
+++ b/lettering-js/index.html
@@ -5,12 +5,7 @@
         <title>lettering.js Demo</title>
     </head>
     <body>
-<h1 class="title">
-<span class="char1">D</span>
-<span class="char2">e</span>
-<span class="char3">m</span>
-<span class="char4">o</span>
-</h1>
+<h1 class="title">MIU WEB</h1>
 
       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/lettering.js/0.7.0/jquery.lettering.min.js"></script>
