--- a/lettering-js/index.html
+++ b/lettering-js/index.html
@@ -3,6 +3,28 @@
 	<head>
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <title>lettering.js Demo</title>
+        <style>
+        	h1{
+        		font-size: 160px;
+        		text-transform: uppercase;
+        	}
+        	
+		.char1 {
+		  transform:skew(35deg);
+		}
+		.char2 {
+		  transform:scale(1,0.5);
+		}
+		.char3 {
+		  transform:rotate(45deg);
+		}
+		.char6, .char7 {
+		  transform:translate(10px, 20px);
+		}
+		.char8 {
+		  transform:skew(30deg) scale(1.1,1.1) rotate(40deg) translate(10px, 20px);
+		}
+        </style>
     </head>
     <body>
 <h1 class="title">MIU WEB</h1>
