--- a/lettering-js/index.html
+++ b/lettering-js/index.html
@@ -9,6 +9,11 @@
         		text-transform: uppercase;
         	}
         	
+        	h1 span{
+        		 display: inline-block;
+			 letter-spacing: 1px;
+        	}
+        	
 		.char1 {
 		  transform:skew(35deg);
 		}
