--- a/scrollTo/index.html
+++ b/scrollTo/index.html
@@ -81,6 +81,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.1/jquery.scrollTo.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 <script type="text/javascript">
 $(document).ready(function(){
 
@@ -100,7 +101,7 @@ $(document).ready(function() {
     // Scroll the window, stop any previous animation, stop on user manual scroll
     // Check https://github.com/flesler/jquery.scrollTo for more customizability
     console.log(this.hash);
-    $(window).stop(true).scrollTo(this.hash, {duration:1000, interrupt:true});
+    $(window).stop(true).scrollTo(this.hash, {duration:1000, interrupt:true,easing:'easeInOutElastic'});
   });
 });
 
