--- a/scrollTo/index.html
+++ b/scrollTo/index.html
@@ -4,6 +4,10 @@
 	<title></title>
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css" rel="stylesheet">
 	<style type="text/css">
+	body{
+		/*Because of the Fixed Header*/
+		margin-top: 100px;
+	}	
 	header{
 		background-color: #000;
 		color: #FFF;
