--- a/scrollTo/index.html
+++ b/scrollTo/index.html
@@ -83,6 +83,10 @@
 
 </section>
 
+<section id="e">
+
+</section>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.1/jquery.scrollTo.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
